# translatePC

./: CMakeLists.txt  README.md  file_io.hpp  main.cpp
